# AlgoTrading

./: .gitignore  ArchPlan.md  Dockerfile  README.md  check_tables.py  docker-compose.yml  migrate_risk_management.py  migrate_theme.py  pyproject.toml  setup.bat  setup.sh  setup_node.ps1  test_sprint1.py  test_sprint6.py
app/: main.py
app/api/: deps.py  schemas.py
app/api/v1/: admin.py  auth.py  broker.py  marketplace.py  strategies.py  users.py  websocket.py
app/brokers/: __init__.py  zerodha.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  shared_strategy.py  strategy.py
ddl/: add_theme_preference.sql  migration_add_risk_management.sql  schema.sql
docs/prompt/: project_plan.md
docs/prompt/Plan/: Backend Implementation Plan.md  UX Implementation Plan.md  UX Plan.md
frontend/: .env.local.example  .env.production.example  README.md  next.config.js  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.ts  tsconfig.node.json
frontend/public/: index.html
frontend/src/: App.css  App.js  auth.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/auth/session/: route.ts
frontend/src/app/api/auth/signout/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/strategies/: page.tsx
frontend/src/components/: AppLayout.tsx  BaseLayout.tsx  BrokerCredentialsForm.tsx  BrokerCredentialsTab.js  ConnectionHealth.tsx  DashboardLayout.tsx  ErrorBoundary.tsx  LiveMarketChart.tsx  MarketplaceGrid.tsx  RiskManagementAccordion.tsx  RiskVisualizer.tsx  ShareModal.tsx  SkeletonLoader.tsx  StrategiesTab.js  StrategyForm.tsx  StrategyTable.tsx  Tooltip.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: useMarketWebSocket.ts  useZerodhaConnection.tsx
frontend/src/pages/: Dashboard.js  Login.js
frontend/src/store/: marketStore.ts
frontend/tests/: websocket-load.spec.ts
