[tool.poetry]
name = "algotrading-saas"
version = "0.1.0"
description = "Multi-tenant Algorithmic Trading Platform with Zerodha Kite Connect"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
psycopg2-binary = "^2.9.9"
celery = {extras = ["redis"], version = "^5.3.6"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# Note: KiteConnect is often updated slowly on PyPI. 
# If needed, pin to specific git commit, but 5.0.1 is standard.
kiteconnect = "^5.0.1" 
cryptography = "^42.0.5"
pyotp = "^2.9.0"
requests = "^2.31.0"
pandas = "^2.2.1"
httpx = "^0.27.0"
redis = "^5.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool Configurations
[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
