[project]
name = "algotrading"
version = "0.1.0"
description = "Multi-tenant Algorithmic Trading Platform with Zerodha Kite Connect"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "psycopg2-binary>=2.9.9",
    "celery[redis]>=5.3.6",
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "kiteconnect>=5.0.1",
    "cryptography>=42.0.5",
    "pyotp>=2.9.0",
    "requests>=2.31.0",
    "pandas>=2.2.1",
    "httpx>=0.27.0",
    "redis>=5.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Tool Configurations
[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
